force-app/main/default/objects/ApontamentoFixo__c/ApontamentoFixo__c.object-meta.xml
<CustomObject>
    <label>Apontamento Fixo</label>
    <nameField>
        <label>Nome</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Apontamentos Fixos</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>