force-app/main/default/objects/ApontamentoFixo__c/fields/DiaDaSemana__c.field-meta.xml
<CustomField>
    <fullName>DiaDaSemana__c</fullName>
    <label>Dia da Semana</label>
    <required>true</required>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Seg</fullName>
            </value>
            <value>
                <fullName>Ter</fullName>
            </value>
            <value>
                <fullName>Qua</fullName>
            </value>
            <value>
                <fullName>Qui</fullName>
            </value>
            <value>
                <fullName>Sex</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>