force-app/main/default/objects/ApontamentoFixo__c/fields/HoraFim__c.field-meta.xml
<CustomField>
    <fullName>HoraFim__c</fullName>
    <label>Hora de Fim</label>
    <length>10</length>
    <required>true</required>
    <type>Text</type>
</CustomField>