force-app/main/default/objects/ApontamentoFixo__c/fields/HoraInicio__c.field-meta.xml
<CustomField>
    <fullName>HoraInicio__c</fullName>
    <label>Hora de Início</label>
    <length>10</length>
    <required>true</required>
    <type>Text</type>
</CustomField>